--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <link rel="icon" href="https://i.ibb.co/1GcLJSJ6/images-4.jpg" type="image/png">
-  <title>আকর্ষণীয় উপহার জেতেন</title>
+  <title>আকর্ষণীয় উপহার জিতুন</title>
   <style>
     body {
       margin: 0;
