--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="icon" href="https://i.ibb.co/1GcLJSJ6/images-4.jpg" type="image/png">
+  <link rel="icon" href="https://i.ibb.co/zYQcPZW/taka-61ab159e4d4a3.jpg" type="image/png">
   <title>আকর্ষণীয় উপহার জিতুন</title>
   <style>
     body {
